# gmc-rebuild

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AI_WORKFLOW.md  EXTERNAL_REVIEW_BRIEF.md  MASTER_STATUS.md  README.md  RECOVERY.md  pyproject.toml
docs/: FOUNDATION_TO_DRY_RUN_ROADMAP.md  GMC_PROJECT_MAP.md  OPEN_GAPS.md
docs/decisions/: 2026-05-19_foundation_complete_confirmation.md  ADR-001_secrets_management.md  ADR-002_kill_switch.md  ADR-003_reconciliation.md  ADR-004_utc_discipline.md  ADR-005_heartbeat.md  ADR-006_deployment_logs.md  ADR-007_minimal_ci.md  ADR-008_monitoring_cadence_and_ai_monitor_role.md  ADR-009_runtime_monitoring_cadence.md  ADR-template.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_2_P2_01_TO_P2_05_CHECKPOINT_SUMMARY.md
docs/deploys/: deploy-log-template.md
governance/authorizations/: 2026-05-11_p2-01.md  2026-05-11_p2-02.md  2026-05-12_p2-03.md  2026-05-12_p2-04.md  2026-05-12_p2-05.md  2026-05-12_phase-2-closure.md  2026-05-13_p3-01-acceptance.md  2026-05-13_p3-01.md  2026-05-13_p3-02-preparation.md  2026-05-13_p3-02.md  2026-05-13_p3-03-planning.md  2026-05-13_p3-03.md  2026-05-13_phase-3-entry-planning.md  2026-05-14_p3-04.md  2026-05-14_p3-05.md  2026-05-14_p4-01.md  2026-05-14_p4-02-enumeration-planning.md  2026-05-14_p4-02.md  2026-05-14_p4-03-enumeration-planning.md  2026-05-14_phase-3-closure.md  2026-05-14_phase-4-entry-planning.md  2026-05-15_p4-03.md  2026-05-15_p4-04-enumeration-planning.md  2026-05-15_p4-04.md  2026-05-16_ops-01.md  2026-05-16_ops-02.md  2026-05-16_ops-03.md  2026-05-16_ops-04.md  2026-05-16_p4-05.md  2026-05-16_p4-06.md  (+43 more)
plan/: phase2_entry_plan.md  phase3_entry_plan.md  phase4_entry_plan.md  phase5_entry_plan.md  phase6_entry_plan.md  rebuild_plan.md
reviews/: review-request-template.md
tests/: test_config_schema.py  test_logging_audit.py  test_package_skeleton.py  test_phase1_governance.py  test_risk_interfaces.py  test_time_utc.py
(+174 files in other folders)
