[project]
name = "gmc-rebuild"
version = "0.1.0-dev"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0", "mypy>=1.5.0", "black>=23.0.0", "pre-commit>=3.3.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
