[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmc-rebuild"
version = "0.1.0"
description = "Phase-gated governance and rebuild framework for GMC trading infrastructure."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Kevin Heaney" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "detect-secrets==1.5.0",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov==7.0.0",
    "ruff==0.15.11",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "9.0.3"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: tests that are too slow for the default pre-commit path",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
